[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OmniTest"
version = "0.1.0"
description = "One platform for everything."
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Your Name" }
]

license = { text = "MIT" }

keywords = [
    "automation",
    "testing",
    "qa",
    "playwright",
    "selenium"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]