[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnitest"
version = "0.1.0"
description = "One platform for everything"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

authors = [
    {name = "Manikandan Parasuraman", email = "manikandan.p,learning@gmail.com"}
]

keywords = [
    "automation",
    "testing",
    "playwright",
    "selenium",
    "qa"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License"
]

dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]