[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnitest"
version = "0.1.2"
description = "One platform for everything"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

authors = [
    { name = "Manikandan Parasuraman", email = "manikandan.p.learning@gmail.com" }
]

keywords = [
    "automation",
    "testing",
    "playwright",
    "qa",
    "framework",
    "e2e",
    "ui-testing"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-cov>=7.0",
    "pytest-mock>=3.14",
    "faker>=37.0",

    "ruff>=0.12",
    "black>=25.0",

    "pylint>=3.3.9",
    "astroid>=3.3.11",

    "mypy>=1.17",

    "build>=1.3",
    "twine>=6.2",
]

[project.urls]
Homepage = "https://github.com/ManikandanParasuraman/OmniTest"
Repository = "https://github.com/ManikandanParasuraman/OmniTest"
Issues = "https://github.com/ManikandanParasuraman/OmniTest/issues"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["omnitest*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --cov=omnitest --cov-report=term-missing"

[tool.coverage.run]
source = ["src/omnitest"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
]

[tool.pylint.main]
ignore-paths = [
    "^tests/.*$"
]

[tool.pylint.messages_control]
disable = [
    "missing-final-newline",
    "too-few-public-methods",
    "protected-access",
    "missing-module-docstring",
]

[tool.pylint.format]
max-line-length = 100